--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-ui-tools-mfelfelani72",
-  "version": "0.1.0",
+  "name": "forma-ui",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -9,7 +9,9 @@
   "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "npm run build:dist",
+    "build:dist": "tsc -p tsconfig.build.json",
+    "build:server": "tsc -p tsconfig.server.json",
     "start": "next start",
     "lint": "eslint"
   },
