--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,5 +6,6 @@
     "outDir": "dist",
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["app", "**/app/**", "next.config.*", "*.test.*", "*.spec.*"]
 }
